# cam_photo_stereo

./: .gitignore  README.md  pyproject.toml  test.txt
doc/: CITATION.cff  TODO  indic_lightmatrix.txt  requirements.txt  setup.sh
photostereo_py/: .gitignore
photostereo_py/samples/new10/: LightMatrix.yml
photostereo_py/samples/queen/: 001.mat  002.mat  003.mat  004.mat  005.mat  006.mat  007.mat  008.mat  009.mat  010.mat  011.mat  012.mat  013.mat  014.mat  015.mat  016.mat  017.mat  018.mat  019.mat  020.mat  021.mat  022.mat  023.mat  024.mat  025.mat  026.mat  027.mat  028.mat  029.mat  030.mat  031.mat  032.mat  033.mat  034.mat  035.mat  036.mat  037.mat  038.mat  039.mat  040.mat  (+61 more)
photostereo_py/samples/samples/ball5/: TiltSlant.txt
photostereo_py/script/: .gitignore  angular_diff.py  callibration.py  comparator.py  config.json5  example.py  height_map.py  light_matrix.py  masker.py  new_photo.py  normal_mapping.exr  normal_mapping.exr.xmp  photostereo.py  requirements.txt  test.py  to_3d.py
photostereo_py/script/exr_analysis_results/: normal_comparison_statistics.json
photostereo_py/script/misc/: colorinv.py  feature_extract.py  test.py
photostereo_py/script/results/exr_analysis_results/: normal_comparison_defects.json
