[project]
name = "photometric-stereo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "json5>=0.12.0",
    "matplotlib>=3.5.1",
    "numba>=0.56.3",
    "numpy>=1.22.2",
    "opencv-contrib-python>=4.5.5.62",
    "opencv-python>=4.11.0.86",
    "openexr>=3.3.4",
    "pathlib2>=2.3.7.post1",
    "scikit-image>=0.19.2",
    "scipy>=1.8.0",
    "vtk>=9.4.2",
]
